# SYCL-For-CUDA-Examples

./: .gitignore  Contributing.md  README  README.md
.github/workflows/: scorecard.yml
example-01/: CMakeLists.txt  README.md  vector_addition.cpp  vector_addition.cu  vector_addition_usm.cpp
example-02/: CMakeLists.txt  README.md  build.sh  sgemm.cu  sycl_sgemm.cpp  sycl_sgemm_interop_task.cpp  sycl_sgemm_usm.cpp
example-03/: Makefile  README.md  vec_add.cu  vec_add_usm.cu
example-04/: Makefile  README.md  SYCL-MPI-Sample.cpp
example-05/: Makefile  distributed-batch-gemm.cpp  vadd_cuda.cu  vadd_sycl.cpp
example-06/: Makefile  README.md  saxpy.cpp  saxpy.cuf
example-07/: CMakeLists.txt  README.md  demo_main.cpp
example-07/cmake/: FindSYCL.cmake
example-07/cmake/Modules/: ComputeCppCompilerChecks.cmake  ComputeCppIRMap.cmake  FindComputeCpp.cmake
example-07/doc/: README.md
example-07/include/: sycl_hash.hpp
example-07/include/hash_functions/: blake2b.hpp  blake3.hpp  keccak.hpp  md2.hpp  sha256.hpp
example-07/include/internal/: async_api.hpp  common.hpp  handle.hpp  sync_api.hpp
example-07/include/tools/: runtime_byte_array.hpp  usm_smart_ptr.hpp
example-07/src/benchmarks/: misc.hpp
example-07/src/hash_functions/: blake2b.cpp  blake3.cpp  keccak.cpp
example-07/tests/: CMakeLists.txt  tests_helpers.hpp
examples/MPI/: Makefile  SYCL-MPI-Sample.cpp
examples/cuda_interop/: Makefile  README.md  vec_add.cu  vec_add_usm.cu
examples/distrib_batch_gemm/: Makefile  README.md  distributed-batch-gemm.cpp  main.cpp  vadd_cuda.cu  vadd_sycl.cpp
examples/fortran_interface/: Makefile  README.md  saxpy.cpp  saxpy.cuf
examples/hashing/: CMakeLists.txt  demo_main.cpp
examples/hashing/include/: sycl_hash.hpp
examples/hashing/include/hash_functions/: blake2b.hpp  blake3.hpp  keccak.hpp  md2.hpp  md5.hpp  sha1.hpp  sha256.hpp
examples/hashing/include/internal/: async_api.hpp  common.hpp  config.hpp  determine_kernel_config.hpp  handle.hpp  sync_api.hpp
examples/hashing/include/tools/: fill_rand.hpp  intrinsics.hpp  runtime_byte_array.hpp  sycl_queue_helpers.hpp  usm_smart_ptr.hpp
examples/hashing/src/benchmarks/: misc.hpp
examples/hashing/src/hash_functions/: blake2b.cpp  blake3.cpp  keccak.cpp  md2.cpp  md5.cpp  sha1.cpp  sha256.cpp
examples/hashing/src/tools/: queue_tester.cpp
examples/hashing/tests/: tests.cpp  tests_helpers.hpp
examples/kokkos/: CMakeLists.txt  README.md  build.sh  test_case.cpp
examples/kokkos/kokkos_build_scripts/: README.md  kokkos_build.sh  kokkos_clang_cuda_build.sh  kokkos_nvcc_cuda_build.sh
examples/sgemm_interop/: CMakeLists.txt  README.md  sgemm.cu  sycl_sgemm.cpp  sycl_sgemm_usm.cpp
examples/vector_addition/: README.md  build.sh  vector_addition.cpp  vector_addition.cu  vector_addition_usm.cpp
exercise-01/: CMakeLists.txt  README.md  build.sh  sgemv.cu  sycl_sgemv.cpp
hashing/: README.md
hashing/cmake/Modules/: FindTriSYCL.cmake
hashing/include/hash_functions/: md5.hpp  sha1.hpp
hashing/src/hash_functions/: sha256.cpp
setup-script/: README.md  build.sh  build_minimal.sh  build_with_libcxx.sh
setup-script/sample/: CMakeLists.txt  README.md  mkl_matmult.cpp  mkl_matmult_usm.cpp
setup-script/sample/include/: chrono.hpp  common.hpp  usm_smart_ptr.hpp
vector_addition/: vector_addition.cpp
